# citadel-agent

./: .gitignore  .gitmodules  Cargo.toml  P2P_BASIC_TEST_REPORT.md  README.md  REQUESTS.md  RESPONSES.md  generate_types.sh
.cargo/: config.toml
.github/workflows/: validate.yml
ci/: Dockerfile.websocket-server  docker-compose.test.yml
citadel-internal-service/: Cargo.toml
citadel-internal-service-connector/: Cargo.toml  WASM_SUPPORT.md
citadel-internal-service-connector/examples/: websocket_json_demo.rs  websocket_server.rs
citadel-internal-service-connector/src/: codec.rs  connector.rs  lib.rs
citadel-internal-service-connector/src/io_interface/: in_memory.rs  mod.rs  tcp.rs  websockets.rs
citadel-internal-service-connector/src/messenger/: backend.rs  mod.rs  mod.rs.bak
citadel-internal-service-connector/tests/: in_memory_messenger.rs  messenger.rs
citadel-internal-service-types/: Cargo.toml  build.rs
citadel-internal-service-types/examples/: generate_ts_types.rs
citadel-internal-service-types/src/: lib.rs  simple_types.rs
citadel-internal-service-wasm-client/: Cargo.toml
citadel-internal-service-wasm-client/src/: lib.rs
citadel-internal-service/src/: lib.rs
citadel-internal-service/src/kernel/: ext.rs  mod.rs
citadel-internal-service/src/kernel/requests/: connect.rs  connection_management.rs  deregister.rs  disconnect.rs  get_sessions.rs  message.rs  mod.rs  register.rs
citadel-internal-service/src/kernel/requests/file/: delete_virtual_file.rs  download.rs  mod.rs  pick_file.rs  respond_file_transfer.rs  upload.rs
citadel-internal-service/src/kernel/requests/group/: create.rs  end.rs  group_list_groups.rs  invite.rs  kick.rs  leave.rs  message.rs  request_join.rs  respond_request.rs
citadel-internal-service/src/kernel/requests/local_db/: clear_all_kv.rs  delete_kv.rs  get_all_kv.rs  get_kv.rs  mod.rs  set_kv.rs
citadel-internal-service/src/kernel/requests/peer/: accept.rs  connect.rs  disconnect.rs  list_all.rs  list_registered.rs  mod.rs  register.rs  respond_register.rs
citadel-internal-service/src/kernel/responses/: disconnect.rs  group_channel_created.rs  group_event.rs  mod.rs  object_transfer_handle.rs  peer_channel_created.rs  peer_event.rs
citadel-internal-service/tests/: file_transfer.rs  group_chat.rs  intra_kernel.rs  orphan_sessions.rs  peer_list.rs  service.rs
citadel-internal-service/tests/common/: Cargo.toml
citadel-internal-service/tests/common/src/: lib.rs
service/: Cargo.toml  server_config.json
service/src/: empty_server.rs  main.rs  websocket_example.rs
typescript-client/: INTEGRATION.md  README.md  WASM_CLIENT.md  package-lock.json  package.json  run_tests.sh  tsconfig.json
typescript-client/src/: CitadelClient.ts  InternalServiceWasmClient.ts  index.ts  test.ts  type-guards.ts  wasm-example.ts
typescript-client/src/types/: AccountInformation.ts  Accounts.ts  BatchedResponseData.ts  ConnectFailure.ts  ConnectSuccess.ts  DeleteVirtualFileFailure.ts  DeleteVirtualFileSuccess.ts  DeregisterFailure.ts  DeregisterSuccess.ts  DisconnectFailure.ts  DisconnectNotification.ts  DownloadFileFailure.ts  DownloadFileSuccess.ts  FileSource.ts  FileTransferRequestNotification.ts  FileTransferStatusNotification.ts  FileTransferTickNotification.ts  GetSessionsResponse.ts  GroupBroadcastHandleFailure.ts  GroupChannelCreateFailure.ts  GroupChannelCreateSuccess.ts  GroupCreateFailure.ts  GroupCreateSuccess.ts  GroupDisconnectNotification.ts  GroupEndFailure.ts  GroupEndNotification.ts  GroupEndSuccess.ts  GroupInviteFailure.ts  GroupInviteNotification.ts  GroupInviteSuccess.ts  GroupJoinRequestNotification.ts  GroupKickFailure.ts  GroupKickSuccess.ts  GroupLeaveFailure.ts  GroupLeaveNotification.ts  GroupLeaveSuccess.ts  GroupListGroupsFailure.ts  GroupListGroupsResponse.ts  GroupListGroupsSuccess.ts  GroupMemberStateChangeNotification.ts  (+54 more)
