[package]
name = "citadel-internal-service-connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
vendored = ["citadel_sdk/vendored"]

[dependencies]
citadel-internal-service-types = { workspace = true }
intersession-layer-messaging = { workspace = true, features = ["testing"] }
#tokio = { workspace = true, features = ["rt", "macros"] }
#tokio-util = { workspace = true, features = ["codec"] }
bincode2 = { workspace = true }
serde = { workspace = true }
futures = { workspace = true, features = ["alloc"] }
uuid = { workspace = true }
async-trait = "0.1.79"
dashmap = { workspace = true }
parking_lot = { workspace = true }
itertools = { workspace = true }
bytes = "1.8.0"
citadel_logging = { workspace = true }
citadel_sdk = { workspace = true, optional = true }
citadel_io = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
citadel_crypt = { workspace = true }
citadel-internal-service-test-common = { workspace = true }

[dev-dependencies]
rand = "0.8.5"