[package]
name = "citadel-internal-service-connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
websockets = ["dep:tokio-tungstenite", "dep:tungstenite", "dep:futures-util"]
vendored = ["citadel_sdk/vendored"]

[dependencies]
citadel-internal-service-types = { workspace = true }
intersession-layer-messaging = { workspace = true, features = ["testing"] }
bincode2 = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
futures = { workspace = true, features = ["alloc"] }
uuid = { workspace = true }
async-trait = "0.1.79"
dashmap = { workspace = true }
parking_lot = { workspace = true }
itertools = { workspace = true }
bytes = "1.8.0"
citadel_logging = { workspace = true }
citadel_sdk = { workspace = true, optional = true }
citadel_io = { workspace = true, default-features = false }

# WebSocket dependencies
tokio-tungstenite = { version = "0.21", optional = true }
tungstenite = { version = "0.21", optional = true }
futures-util = { version = "0.3", optional = true }

# WASM dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
citadel_crypt = { workspace = true }
citadel-internal-service-test-common = { workspace = true }
citadel_io = { workspace = true, features = ["std"] }

[dev-dependencies]
rand = "0.8.5"
tokio = { workspace = true, features = ["full"] }
env_logger = "0.10"

[[example]]
name = "websocket_json_demo"
required-features = ["websockets"]

[[example]]
name = "websocket_server"
required-features = ["websockets"]
