[package]
name = "citadel-internal-service-wasm-client"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
citadel-internal-service-connector = { workspace = true }
citadel-internal-service-types = { workspace = true }
citadel_io = { workspace = true, default-features = false }

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.37"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    "ErrorEvent",
] }

# WebSocket support for WASM - using ws_stream_wasm for better WASM compatibility
ws_stream_wasm = "0.7"
# url = "2.4"  # Not needed with ws_stream_wasm
futures = "0.3"
futures-util = "0.3"

# Async trait support
async-trait = "0.1"

# Use tokio from citadel_io to avoid version conflicts
# tokio = { version = "1.0", features = [
#     "sync",
#     "time",
# ], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# Error handling
thiserror = "2.0"

# Logging for debugging
console_error_panic_hook = "0.1"

# Static storage
once_cell = "1.19"
dashmap = "6.1"

# WASM-specific random number generation
getrandom = { version = "0.2", features = ["js"] }

# Send wrapper for WASM compatibility
send_wrapper = "0.6"
