[package]
name = "citadel-internal-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
vendored = ["citadel_sdk/vendored"]
websockets = ["citadel-internal-service-connector/websockets"]
js = ["uuid/js"]
# Enable native file picker dialog support (for PickFile request)
# Only enable when building for native desktop (not in Docker/server)
native-dialogs = ["rfd"]
# Enable parking_lot deadlock detection for debugging lock contention
deadlock-detection = []

[dependencies]
citadel_sdk = { workspace = true, features=["multi-threaded"] }
tokio = { workspace = true, features = ["net", "rt", "macros"] }
bincode2 = { workspace = true }
citadel-internal-service-types = { workspace = true }
citadel-internal-service-connector = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true, features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}
bytes = { workspace = true }
async-recursion = { workspace = true }
# Optional: native file picker dialog (requires desktop environment)
rfd = { workspace = true, optional = true }
# Synchronous RwLock to prevent holding locks across await points
parking_lot = { workspace = true }

[dev-dependencies]
citadel_sdk = { workspace = true, features=["multi-threaded", "localhost-testing"] }
citadel-internal-service-test-common = { workspace = true }